fix: correct  paths in openapi.yaml for swagger components
